<resources>
    <string name="app_name">Mk Player</string>
    <string name="download">Download</string>
    <string name="thumbnail_image_des">thumbnail image</string>
    <string name="duration_placeholder">04:12</string>
    <string name="video_title_placeHolder">Video Title</string>
    <string name="more_button_des">more button</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="rename">Rename</string>
    <string name="place_holder_folder_name">Videos (3)</string>
    <string name="allow_access">Allow Access</string>
    <string name="permission_text">To Play Videos Please Give Storage Permission</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="file_name">File Name:</string>
    <string name="file_info">File Info</string>
    <string name="rename_video">Rename Video</string>
    <string name="folders">Folders</string>
    <string name="todo">TODO</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="size">Size:</string>
    <string name="path">Path:</string>
    <string name="duration">Duration:</string>
    <string name="date_added">Date Added:</string>
    <string name="format">Format:</string>
    <string name="resolution">Resolution:</string>
    <string name="about_description">Version, credits</string>
    <string name="about_name">About</string>
    <string name="appearance_description">Adjust the app to your liking</string>
    <string name="appearance_name">Appearance</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="disable">Disable</string>
    <string name="done">Done</string>
    <string name="double_tap">Double tap gesture</string>
    <string name="double_tap_description">Select double tap gesture action</string>
    <string name="error_playing_video">Error: Can\'t play video</string>
    <string name="fast_seek">Fast seeking</string>
    <string name="fast_seek_description">Seek to nearest key frame instead of exact one.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="group_videos">Group videos by folder</string>
    <string name="location">Location</string>
    <string name="menu">Menu</string>
    <string name="navigate_up">Navigate up</string>
    <string name="no_videos_found">No videos found</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_info">The Next Player app needs \"%1$s\" permission to access and play media. Without it, media access and playback won\'t work. To use the app fully, grant the permission.</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_settings">The Next Player app needs \"%1$s\" permission to access and play media. Without it, media access and playback won\'t work. To use the app fully, grant the permission from settings since it was permanently denied.</string>
    <string name="player_controls_exit">Navigate up</string>
    <string name="player_controls_next">Player next</string>
    <string name="player_controls_play_pause">Player play pause</string>
    <string name="player_controls_previous">Player previous</string>
    <string name="player_controls_progress">Player progress bar</string>
    <string name="player_description">Player appearance, playback controls</string>
    <string name="player_name">Player</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="autoplay_settings">Autoplay</string>
    <string name="autoplay_settings_description">Automatically play the next video in the current folder</string>
    <string name="remember_brightness_level">Remember brightness</string>
    <string name="remember_brightness_level_description">Remember brightness level between playback sessions</string>
    <string name="remember_selections">Remember selections</string>
    <string name="remember_selections_description">Remember selections for each file like audio track, subtitle track, etc</string>
    <string name="resume">Resume</string>
    <string name="resume_description">Select whether to resume played videos from the point where you stopped</string>
    <string name="seek_gesture">Seek Gesture</string>
    <string name="seek_gesture_description">Swipe horizontally to seek forwards or backwards</string>
    <string name="select_audio_track">Select audio track</string>
    <string name="select_subtitle_track">Select subtitle track</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="swipe_gesture">Swipe gesture</string>
    <string name="swipe_gesture_description">Swipe vertically to adjust the brightness and volume</string>
    <string name="title">Title</string>
    <string name="title_activity_player">Next Player Activity</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="playback">Playback</string>
    <string name="interface_name">Interface</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="shortest">Shortest</string>
    <string name="longest">Longest</string>
    <string name="smallest">Smallest</string>
    <string name="largest">Largest</string>
    <string name="dark_theme">Dark theme</string>
    <string name="video_zoom">Video zoom</string>
    <string name="dynamic_theme">Dynamic color theme</string>
    <string name="dynamic_theme_description">Apply colors from system wallpaper to the application theme</string>
    <string name="controls_lock">Lock controls</string>
    <string name="controls_unlock">Unlock controls</string>
    <string name="select_playback_speed">Select Playback Speed</string>
    <string name="audio">Audio</string>
    <string name="preferred_audio_lang">Preferred audio language</string>
    <string name="preferred_audio_lang_description">Language of the audio track you want to use by default</string>
    <string name="subtitle">Subtitle</string>
    <string name="preferred_subtitle_lang">Preferred subtitle language</string>
    <string name="preferred_subtitle_lang_description">Language of the subtitle track you want to use by default</string>
    <string name="system_default">System Default</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="play_pause">Play/Pause</string>
    <string name="ff_rewind">Fast forward/Rewind</string>
    <string name="play_pause_ff_rewind">Play/Pause and Fast forward/Rewind</string>
    <string name="none">None</string>
    <string name="auto">Auto</string>
    <string name="enable">Enable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan">Scan</string>
    <string name="media_library">Media library</string>
    <string name="force_rescan_storage">Force rescan storage</string>
    <string name="force_rescan_storage_desc">Caution: Initiating a full storage rescan may cause increased resource usage on your device</string>
    <string name="media_library_description">Scan and manage media library</string>
    <string name="scanning_storage">Scanning storage…</string>
    <string name="manage_folders">Manage folders</string>
    <string name="manage_folders_desc">Select folders to be excluded in the media library</string>
    <string name="video">video</string>
    <string name="videos">videos</string>
    <string name="screen_rotation">Screen Rotation</string>
    <string name="player_screen_orientation">Player screen orientation</string>
    <string name="automatic">Automatic (sensor)</string>
    <string name="landscape">Landscape</string>
    <string name="landscape_reverse">Landscape reverse</string>
    <string name="landscape_auto">Landscape (sensor)</string>
    <string name="portrait">Portrait</string>
    <string name="video_orientation">Video Orientation</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="date">Date</string>
    <string name="default_playback_speed">Default playback speed</string>
    <string name="enter_a_network_url">Enter a network URL:</string>
    <string name="example_url" translatable="false">http://example.com/example.mp4</string>
    <string name="network_stream">Network Stream</string>
    <string name="play_file">Open video file to play</string>
    <string name="play_url">Enter video url to play</string>
    <string name="default_name">Default</string>
    <string name="monospace">Monospace</string>
    <string name="sans_serif">Sans Serif</string>
    <string name="serif">Serif</string>
    <string name="subtitle_font">Subtitle font</string>
    <string name="subtitle_text_bold">Bold subtitle text</string>
    <string name="subtitle_text_bold_desc">Use bold text for subtitle</string>
    <string name="subtitle_text_size">Subtitle text size</string>
    <string name="subtitle_desc">Subtitle appearance, playback options</string>
    <string name="subtitle_background">Subtitle background</string>
    <string name="subtitle_background_desc">Enable background to subtitle text</string>
    <string name="decoder">Decoder</string>
    <string name="decoder_desc">Decoder priority, playback decoder options</string>
    <string name="video_software_decoders">Software video decoders</string>
    <string name="video_software_decoders_desc">Use application software video decoders (experimental)</string>
    <string name="decoder_priority">Decoder priority</string>
    <string name="prefer_device_decoders">Prefer device decoders</string>
    <string name="prefer_app_decoders">Prefer app decoders</string>
    <string name="device_decoders_only">Device decoders only</string>
    <string name="embedded_styles">Embedded styles</string>
    <string name="embedded_styles_desc">Apply the embedded styles that are present in subtitle files, such as ASS and so on</string>
    <string name="controller_timeout">Controller timeout</string>
    <string name="seek_increment">Seek Increment/Decrement</string>
    <string name="seconds">%1$s seconds</string>
    <string name="delete_file">The following file will be deleted permanently</string>
    <string name="subtitle_text_encoding">Subtitle text encoding</string>
    <string name="delete_folder">All video files in the following folder will be deleted permanently.</string>
    <string name="fast_playback_speed">%.1fx speed</string>
    <string name="long_press_gesture">Long press gesture</string>
    <string name="long_press_gesture_desc">Long press to play at %.1fx speed</string>
    <string name="best_fit">Best fit</string>
    <string name="stretch">Stretch</string>
    <string name="crop">Crop</string>
    <string name="hundred_percent">100%</string>
    <string name="zoom_gesture">Zoom gesture</string>
    <string name="zoom_gesture_description">Pinch to zoom the video</string>
    <string name="high_contrast_dark_theme">High contrast</string>
    <string name="high_contrast_dark_theme_desc">Use pure black background for dark theme</string>
    <string name="audio_desc">Audio playback options</string>
    <string name="pause_on_headset_disconnect">Pause on disconnect</string>
    <string name="pause_on_headset_disconnect_desc">Pause playback when headset disconnected from the device</string>
    <string name="system_volume_panel">System volume panel</string>
    <string name="system_volume_panel_desc">Show system volume panel while adjusting volume with headset on</string>
    <string name="system_caption_style">System caption style</string>
    <string name="player">Player</string>
    <string name="new_tag">New</string>
    <string name="delete_the_following_file">Delete following video</string>
</resources>