<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.AllowAccessActivity">

    <ImageView
        android:id="@+id/allow_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_folder"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allow_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorTertiary"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_text"
        android:textColor="?attr/colorTertiary"
        android:padding="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text1"/>
    <TextView
        android:id="@+id/allow_access"
        android:layout_width="wrap_content"
        android:background="@drawable/chip_video_count"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/allow_access"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/colorTertiary"
        />
</RelativeLayout>