<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.PlayerSettingFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading_player"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical"
        android:text="@string/player"
        android:drawablePadding="10dp"
        android:textColor="?attr/colorTertiary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_arrow_black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/interface_name"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/swipe_seek"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_gesture"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorTertiary"
        />
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/seek_gesture_description"
        android:layout_gravity="center_vertical"
        android:textSize="11sp"
        android:textColor="?attr/colorTertiary"
        />

    </LinearLayout>
    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="0dp"
        android:layout_weight="1"
        app:thumbTint="?attr/colorTertiary"
        style="@style/Widget.App.Switch"
        android:layout_gravity="center_vertical"
        android:id="@+id/switch_seek_gesture"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/scroll_vol"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_gesture"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorTertiary"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/swipe_gesture_description"
                android:layout_gravity="center_vertical"
                android:textSize="11sp"
                android:textColor="?attr/colorTertiary"
                />

        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            app:thumbTint="?attr/colorTertiary"
            style="@style/Widget.App.Switch"
            android:id="@+id/switch_scroll_gesture"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/pinch_zoom"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoom_gesture"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorTertiary"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/zoom_gesture_description"
                android:layout_gravity="center_vertical"
                android:textSize="11sp"
                android:textColor="?attr/colorTertiary"
                />

        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            app:thumbTint="?attr/colorTertiary"
            style="@style/Widget.App.Switch"
            android:id="@+id/switch_zoom_gesture"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>