<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:paddingStart="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="RtlSymmetry">

    <androidx.cardview.widget.CardView
        android:id="@+id/thumbnail_card"
        android:layout_width="95dp"
        android:layout_height="58dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="95dp"
            android:layout_height="58dp"
            android:background="@color/black"
            android:contentDescription="@string/thumbnail_image_des"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/video_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/chip_video_duration"
            android:padding="2dp"
            android:text="@string/duration_placeholder"
            android:textColor="@android:color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/symbol_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/new_view"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/new_tag"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:visibility="gone" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/video_name"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/video_title_placeHolder"
        android:textColor="?attr/colorTertiaryFixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/video_menu_more"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/video_menu_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_button_des"
        android:foregroundTint="@color/colorLightDark1"
        android:padding="10dp"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>